--- a/src/config/Makefile
+++ b/src/config/Makefile
@@ -46,8 +46,8 @@ CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libconfig_la_DEPENDENCIES = $(top_builddir)/src/action/libaction.la
 am_libconfig_la_OBJECTS = Config.lo DetectorConfig.lo Exception.lo \
-	Exposition.lo GSMS.lo GlobalConfig.lo HullConfig.lo Job.lo \
-	MaskConfig.lo SceneConfig.lo Waypoint.lo
+	Exposition.lo GSMS.lo GlobalConfig.lo Hull.lo Job.lo Mask.lo \
+	SceneConfig.lo Waypoint.lo
 libconfig_la_OBJECTS = $(am_libconfig_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -186,12 +186,12 @@ INCLUDES = -I$(top_srcdir)/src
 METASOURCES = AUTO
 noinst_LTLIBRARIES = libconfig.la
 libconfig_la_SOURCES = Config.cpp DetectorConfig.cpp Exception.cpp \
-	Exposition.cpp GSMS.cpp GlobalConfig.cpp HullConfig.cpp Job.cpp MaskConfig.cpp \
-	SceneConfig.cpp Waypoint.cpp
+	Exposition.cpp GSMS.cpp GlobalConfig.cpp Hull.cpp Job.cpp Mask.cpp SceneConfig.cpp \
+	Waypoint.cpp
 
 libconfig_la_LIBADD = $(top_builddir)/src/action/libaction.la
 noinst_HEADERS = Config.h DetectorConfig.h Exception.h GSMS.h GlobalConfig.h \
-	HullConfig.h Job.h MaskConfig.h SceneConfig.h Waypoint.h
+	Hull.h Job.h Mask.h SceneConfig.h Waypoint.h
 
 _SOURCES = Exposition.cpp Exposition.h Point.h
 all: all-am
@@ -251,9 +251,9 @@ include ./$(DEPDIR)/Exception.Plo
 include ./$(DEPDIR)/Exposition.Plo
 include ./$(DEPDIR)/GSMS.Plo
 include ./$(DEPDIR)/GlobalConfig.Plo
-include ./$(DEPDIR)/HullConfig.Plo
+include ./$(DEPDIR)/Hull.Plo
 include ./$(DEPDIR)/Job.Plo
-include ./$(DEPDIR)/MaskConfig.Plo
+include ./$(DEPDIR)/Mask.Plo
 include ./$(DEPDIR)/SceneConfig.Plo
 include ./$(DEPDIR)/Waypoint.Plo
 
